# skeleton

./: Notas-Scratchbox-Maemo  autogen.sh  configure.ac
debian/: changelog  control  rules  skeleton.install
src/: Makefile.am  main.c
